--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,7 @@
       "@hooks/*": [ "src/hooks/*" ],
       "@lib/*": [ "src/lib/*" ],
       "@styles/*": [ "src/styles/*" ],
-      "@util/*": [ "src/util/*" ]
+      "@util/*": [ "src/util/*" ],
     }
   }
 }
