--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@cloudinary/url-gen": "^1.8.7",
+    "@turf/center": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "graphql": "^16.6.0",
+    "leaflet": "^1.9.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^4.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.49.7",
     "use-snipcart": "^1.2.0"
   },
